--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link
-      rel="icon"
-      href="https://icons.iconarchive.com/icons/bokehlicia/captiva/256/chat-bubble-icon.png"
-    />
+    <link rel="icon" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <link
-      rel="apple-touch-icon"
-      href="https://icons.iconarchive.com/icons/bokehlicia/captiva/256/chat-bubble-icon.png"
-    />
+    <link rel="apple-touch-icon" href="favicon.ico" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
